fixed icons wrap

--- a/Lesson-18__SVG-icons/One-more-icon/style.css
+++ b/Lesson-18__SVG-icons/One-more-icon/style.css
@@ -1,8 +1,4 @@
-body {
-  margin-top: -4px;
-}
-
-div {
+.battery {
   display: flex;
   justify-content: space-around;
 }
